service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: django-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 31455
